tests/errors/compiler/continue_not_in_loop/continue_before_return.c
int main()
{
	print("before");
	continue;
	print("after");

	return 0;
}
